--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -3,25 +3,122 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
-  height: 100vh;
   background-color: rgb(201, 201, 201);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.main-page {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  padding: 80px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+}
+
+.header h1 {
+  font-size: 40px;
 }
 
 .nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   align-items: center;
   gap: 10px;
-  height: 3rem;
-  background: rgb(129, 101, 101);
+  background-color: #333;
 }
 
 .link {
-  color: #000;
+  color: #fff;
   text-decoration: none;
+  padding: 14px 20px;
+  border-left: 2px solid #777777;
+  border-right: 2px solid #777777;
 }
 
 .link:hover {
   color: aqua;
+}
+
+.row {
+  display: flex;
+  flex-grow: 1;
+}
+
+.side {
+  flex: 30%;
+  background-color: #f1f1f1;
+  padding: 30px;
+}
+
+.side h2 {
+  font-size: 18px;
+  font-weight: bold;
+}
+.side p {
+  font-size: 14px;
+  padding-top: 5px;
+}
+
+.main {
+  flex: 70%;
+  background-color: white;
+  padding: 30px;
+}
+
+.main h2 {
+  font-size: 18px;
+}
+
+.main p {
+  font-size: 14px;
+  padding-top: 5px;
+}
+
+.footer {
+  padding: 20px;
+  background-color: #777777;
+  text-align: center;
+  color: #1abc9c;
+}
+
+@media screen and (max-width: 700px) {
+  .row {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .nav {
+    flex-direction: column;
+  }
+  .link {
+    border-bottom: 2px solid #777777;
+    border-right: none;
+    border: 1px solid #777777;
+  }
+}
+
+.about {
+  background-color: #f1f1f1;
+  padding: 30px;
+}
+
+.about h1 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.about p {
+  font-size: 14px;
+  padding-top: 5px;
+}
+
+.about-img {
 }
