--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -111,8 +111,9 @@ body {
 }
 
 .about h1 {
-  font-size: 18px;
+  font-size: 22px;
   font-weight: bold;
+  padding: 30px 0;
 }
 
 .about p {
@@ -120,5 +121,21 @@ body {
   padding-top: 5px;
 }
 
-.about-img {
+.about h2 {
+  margin: 30px 0;
+  font-size: 16px;
+}
+
+.image-row {
+  display: flex;
+  gap: 5px;
+}
+
+.image-column {
+  flex: 33%;
+}
+
+.image-column img {
+  width: 100%;
+  height: 100%;
 }
