--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -88,6 +88,10 @@ body {
   color: #1abc9c;
 }
 
+.footer h2 {
+  font-size: 1rem;
+}
+
 @media screen and (max-width: 700px) {
   .row {
     flex-direction: column;
