--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -77,8 +77,31 @@ body {
 }
 
 .main p {
+  display: flex;
   font-size: 14px;
-  padding-top: 5px;
+  margin: 20px 0;
+}
+
+.main img {
+  max-width: 50%;
+  height: auto;
+  border-radius: 10%;
+  animation: spring 2s ease forwards;
+}
+
+@keyframes spring {
+  0% {
+    transform: scale(1) translateY(0);
+  }
+  30% {
+    transform: scale(0.8, 1.1) translateY(-10px);
+  }
+  50% {
+    transform: scale(1) translateY(0);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .footer {
@@ -95,12 +118,14 @@ body {
 @media screen and (max-width: 700px) {
   .row {
     flex-direction: column;
+    animation: none;
   }
 }
 
 @media screen and (max-width: 400px) {
   .nav {
     flex-direction: column;
+    animation: none;
   }
   .link {
     border-bottom: 2px solid #777777;
